Changed blockquote font color

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ a:focus {
   color: {{ site.hover-col }};
 }
 blockquote {
-  color: #808080;
+  color: #DF264B;
   font-style: italic;
 }
 blockquote p:first-child {
