--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ p {
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #DF264B;
   font-weight: 800;
 }
 a {
