--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ p {
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #DF264B;
+  color: #DC0824;
   font-weight: 800;
 }
 a {
@@ -34,7 +34,7 @@ a:focus {
   color: {{ site.hover-col }};
 }
 blockquote {
-  color: #DF264B;
+  color: #DC0824;
   font-style: italic;
 }
 blockquote p:first-child {
