--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ layout: null
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
-  color: #FFFFFF;
+  color: #212121;
   position: relative;
   background-color: {{ site.page-col }};
   {% if site.page-img %}
