--- a/css/main.css
+++ b/css/main.css
@@ -122,12 +122,22 @@ img {
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
   color: {{ site.navbar-text-col }};
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .navbar-custom .navbar-brand:hover,
